[package]
name = "covid19db"
version = "2.0.5"
authors = ["John Goerzen <jgoerzen@complete.org>"]
edition = "2018"
license = "GPL-3.0+"
description = "Utility for building and accessing COVID-19 datasets"
homepage = "https://github.com/jgoerzen/covid19db"
repository = "https://github.com/jgoerzen/covid19db/"
readme = "README.md"
keywords = ["covid19", "covid-19", "database", "coronavirus"]
categories = ["command-line-utilities", "database", "science"]

[[bin]]
name = "covid19db-loader"
path = "src/main.rs"

[lib]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
julianday = "0.2"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["socks"] }
tempfile = "3.1"
flate2 = "1.0"
